tests/errors/unknown_auth_mech.experr
no mutually supported AUTH mechanism
